--- a/keras/Finetune Resnet 101-LastFewLayers.ipynb
+++ b/keras/Finetune Resnet 101-LastFewLayers.ipynb
@@ -36,23 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ankdesh/virtualenvs/cdiscount-py2.7/local/lib/python2.7/site-packages/numpy/lib/arraysetops.py:463: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  mask |= (ar1 == a)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 5570369 images belonging to 5270 classes.\n",
-      "Found 614245 images belonging to 5270 classes.\n"
+      "Found 11757587 images belonging to 5270 classes.\n",
+      "Found 613706 images belonging to 5270 classes.\n"
      ]
     }
    ],
@@ -61,8 +53,8 @@
     "DATA_DIR = '../../dataset'\n",
     "\n",
     "train_offsets_df = pd.read_csv(os.path.join(METADATA_DIR,\"train_offsets.csv\"), index_col=0)\n",
-    "train_images_df = pd.read_csv(os.path.join(METADATA_DIR,\"RandomSplit_Train_0.5_0.1.csv\"), index_col=0)\n",
-    "val_images_df = pd.read_csv(os.path.join(METADATA_DIR,\"RandomSplit_Val_0.5_0.1.csv\"), index_col=0)\n",
+    "train_images_df = pd.read_csv(os.path.join(METADATA_DIR,\"RandomSplit_Train_0.0_0.05.csv\"), index_col=0)\n",
+    "val_images_df = pd.read_csv(os.path.join(METADATA_DIR,\"RandomSplit_Val_0.0_0.05.csv\"), index_col=0)\n",
     "\n",
     "num_classes = 5270\n",
     "num_train_images = len(train_images_df)\n",
@@ -640,14 +632,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# compile the model (should be done *after* setting layers to non-trainable)\n",
     "# model.compile(optimizer='rmsprop', loss='categorical_crossentropy')\n",
     "from keras.optimizers import SGD\n",
-    "opt = SGD(lr=1e-3, decay=0.0, momentum=0.9, nesterov=True)\n",
+    "opt = SGD(lr=1e-4, decay=0.0, momentum=0.9, nesterov=True)\n",
     "model.compile(optimizer=opt,\n",
     "              loss=\"categorical_crossentropy\",\n",
     "              metrics=[\"accuracy\"])\n"
@@ -665,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -673,8 +665,22 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      " 89265/174074 [==============>...............] - ETA: 25193s - loss: 2.0797 - acc: 0.5711"
+      "174073/174074 [============================>.] - ETA: 0s - loss: 1.6309 - acc: 0.6461Epoch 00000: saving model to saved_models/Resnet101.00-0.65-0.61_RandomSplit_Train_0.5_0.1.h5\n",
+      "174074/174074 [==============================] - ETA: 0s - loss: 1.6309 - acc: 0.6461 - val_loss: 2.0067 - val_acc: 0.6065\n",
+      "Epoch 2/2\n",
+      "174073/174074 [============================>.] - ETA: 0s - loss: 1.5813 - acc: 0.6549Epoch 00001: saving model to saved_models/Resnet101.01-0.65-0.61_RandomSplit_Train_0.5_0.1.h5\n",
+      "174074/174074 [==============================] - ETA: 0s - loss: 1.5813 - acc: 0.6549 - val_loss: 2.0008 - val_acc: 0.6078\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fbe5b09d590>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -692,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -700,11 +706,22 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "174073/174074 [============================>.] - ETA: 0s - loss: 2.5226 - acc: 0.5129Epoch 00000: saving model to saved_models/Resnet101.00-0.51-0.52_RandomSplit_Train_0.5_0.1.h5\n",
-      "174074/174074 [==============================] - ETA: 0s - loss: 2.5226 - acc: 0.5129 - val_loss: 2.5121 - val_acc: 0.5230\n",
+      "367423/367424 [============================>.] - ETA: 0s - loss: 1.8111 - acc: 0.6270Epoch 00000: saving model to saved_models/Resnet101.00-0.63-0.64_RandomSplit_Train_0.5_0.1.h5\n",
+      "367424/367424 [==============================] - ETA: 0s - loss: 1.8111 - acc: 0.6270 - val_loss: 1.7146 - val_acc: 0.6446\n",
       "Epoch 2/2\n",
-      "174073/174074 [============================>.] - ETA: 0s - loss: 2.3817 - acc: 0.5312"
+      "367423/367424 [============================>.] - ETA: 0s - loss: 1.7637 - acc: 0.6338Epoch 00001: saving model to saved_models/Resnet101.01-0.63-0.65_RandomSplit_Train_0.5_0.1.h5\n",
+      "367424/367424 [==============================] - ETA: 0s - loss: 1.7637 - acc: 0.6338 - val_loss: 1.7143 - val_acc: 0.6453\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fbe8504f390>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1221,6 +1238,61 @@
    "source": [
     "for i,layer in enumerate(model.layers):\n",
     "    print (i, layer.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for layer in model.layers:\n",
+    "    layer.trainable = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-f6e7ae7e7e4c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptimizers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSGD\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mopt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSGD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdecay\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmomentum\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.9\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnesterov\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m model.compile(optimizer=opt,\n\u001b[0m\u001b[1;32m      8\u001b[0m               \u001b[0mloss\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"categorical_crossentropy\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m               metrics=[\"accuracy\"])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "num_epochs = 2\n",
+    "batch_size = 32\n",
+    "# compile the model (should be done *after* setting layers to non-trainable)\n",
+    "# model.compile(optimizer='rmsprop', loss='categorical_crossentropy')\n",
+    "from keras.optimizers import SGD\n",
+    "opt = SGD(lr=1e-5, decay=0.0, momentum=0.9, nesterov=True)\n",
+    "model.compile(optimizer=opt,\n",
+    "              loss=\"categorical_crossentropy\",\n",
+    "              metrics=[\"accuracy\"])\n",
+    "\n",
+    "\n",
+    "# train the model on the new data for a few epochs\n",
+    "model.fit_generator(train_gen,\n",
+    "                    steps_per_epoch = num_train_images // batch_size,\n",
+    "                    epochs = num_epochs,\n",
+    "                    validation_data = val_gen,\n",
+    "                    validation_steps = num_val_images // batch_size,\n",
+    "                    workers = 4, callbacks=[checkpointer])"
    ]
   },
   {
